fixed overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding-top: 5rem;
+    /* padding-top: 5rem; */
 } 
 
 .main-content {
